[gd_scene load_steps=29 format=2]

[ext_resource path="res://Player/Companion.gd" type="Script" id=1]
[ext_resource path="res://Characters/Munk Boy/attack 2/Munkboy_attack2_2.png" type="Texture" id=2]
[ext_resource path="res://Characters/Munk Boy/run/Munkboy_run_2.png" type="Texture" id=3]
[ext_resource path="res://Music and Sounds/Swipe.wav" type="AudioStream" id=4]
[ext_resource path="res://EnemyDetectionZone.gd" type="Script" id=5]
[ext_resource path="res://Characters/Munk Boy/run/Munkboy_run_5.png" type="Texture" id=6]
[ext_resource path="res://Characters/Munk Boy/attack 2/Munkboy_attack2_1.png" type="Texture" id=7]
[ext_resource path="res://Characters/Munk Boy/run/Munkboy_run_1.png" type="Texture" id=8]
[ext_resource path="res://Characters/Munk Boy/run/Munkboy_run_3.png" type="Texture" id=9]
[ext_resource path="res://Characters/Munk Boy/run/Munkboy_run_4.png" type="Texture" id=10]
[ext_resource path="res://Characters/Munk Boy/attack 2/Munkboy_attack2_3.png" type="Texture" id=11]
[ext_resource path="res://Characters/Munk Boy/run/Munkboy_run_6.png" type="Texture" id=12]
[ext_resource path="res://Characters/Munk Boy/attack 2/Munkboy_attack2_4.png" type="Texture" id=13]
[ext_resource path="res://Player/EnemyInRange.gd" type="Script" id=14]
[ext_resource path="res://Characters/Munk Boy/idle/Munkboy_idle_4.png" type="Texture" id=26]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=28]
[ext_resource path="res://Characters/Munk Boy/idle/Munkboy_idle_2.png" type="Texture" id=31]
[ext_resource path="res://Characters/Munk Boy/idle/Munkboy_idle_3.png" type="Texture" id=36]
[ext_resource path="res://Characters/Munk Boy/idle/Munkboy_idle_1.png" type="Texture" id=37]
[ext_resource path="res://HurtHitbox/Hitbox.tscn" type="PackedScene" id=39]

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hitbox_enable"
}, {
"args": [  ],
"method": "hit_finished1"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 13 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 40, -20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.8 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 37 ), ExtResource( 31 ), ExtResource( 36 ), ExtResource( 26 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.8 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 984.401

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 48.1788, 83.9328 )

[sub_resource type="CircleShape2D" id=14]
radius = 1851.53

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 47.7297, 85.2064 )

[node name="Companion" type="KinematicBody2D"]
position = Vector2( -8.5918, 10.0238 )
collision_layer = 0
collision_mask = 19
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -25.8307, -1.66579 )
polygon = PoolVector2Array( -24.9361, 75.8012, 67.9269, 77.3886, 15.5427, -65.4775 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/RESET = SubResource( 15 )
anims/attack1 = SubResource( 3 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 13 )
offset = Vector2( 40, -20 )

[node name="EnemyDetectionZone" parent="." instance=ExtResource( 28 )]
modulate = Color( 1, 1, 1, 0.231373 )
collision_mask = 16
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="EnemyDetectionZone" index="0"]
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 39 )]
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 111.373, -12.7826 )
shape = SubResource( 12 )
disabled = true

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 28 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 14 )

[node name="EnemyInRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyInRange"]
position = Vector2( 111.15, -12.5662 )
shape = SubResource( 16 )

[connection signal="body_entered" from="EnemyDetectionZone" to="EnemyDetectionZone" method="_on_EnemyDetectionZone_body_entered"]
[connection signal="body_exited" from="EnemyDetectionZone" to="EnemyDetectionZone" method="_on_EnemyDetectionZone_body_exited"]
[connection signal="body_entered" from="EnemyInRange" to="EnemyInRange" method="_on_EnemyInRange_body_entered"]
[connection signal="body_exited" from="EnemyInRange" to="EnemyInRange" method="_on_EnemyInRange_body_exited"]

[editable path="EnemyDetectionZone"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
